--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.css
@@ -6,12 +6,16 @@
     margin-left: 3.8%;
     width: 95%;
 }
-#login_boton {
+/* #login_boton {
     margin-bottom: 4.5%;
     margin-left: 43%;
-}
+} */
 
 .signup {
     margin-left: 3.8%;
     width: 95%;
+}
+
+#logo{
+    margin-top: 15%;
 }
