--- a/ExpoFpApp/app/src/main/res/layout/fragment_sign_up.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_sign_up.xml
@@ -14,7 +14,9 @@
             android:id="@+id/buttonRegistrar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/Registro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +24,7 @@
 
         <EditText
             android:id="@+id/editTextNombreRegistro"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
@@ -36,7 +38,7 @@
 
         <EditText
             android:id="@+id/editTextEmailRegistro"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:ems="10"
@@ -48,7 +50,7 @@
 
         <EditText
             android:id="@+id/editTextPasswordRegistro"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:ems="10"
@@ -60,7 +62,7 @@
 
         <EditText
             android:id="@+id/editTextPasswordRepeat"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:ems="10"
@@ -72,7 +74,7 @@
 
         <Button
             android:id="@+id/buttonSubirImagen"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:text="@string/SubirImagen"
@@ -89,6 +91,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeat"
             tools:src="@tools:sample/avatars[0]" />
+
+        <Button
+            android:id="@+id/buttonRegistroaLogin"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/deRegistroaLogin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRegistrar" />
 
     </android.support.constraint.ConstraintLayout>
 
