inicio terminado, tarjetas añadidas a lista de proyectos, coreegidos cambios visuales

--- a/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
@@ -1,24 +1,44 @@
 
 				<ngb-carousel>
 					<ng-template ngbSlide>
-						<img src="assets/images/big/salesianos.png" alt="Random first slide">
+						<img src="assets/images/big/expo.jpg" alt="Random first slide">
 						<div class="carousel-caption">
-							<h3 class="text-white font-bold">First slide label</h3>
-							<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+							<h3 class="text-white font-bold"></h3>
+							<p></p>
 						</div>
 					</ng-template>
 					<ng-template ngbSlide>
-						<img src="assets/images/big/expo.jpg" alt="Random second slide">
+						<img src="assets/images/big/portada.jpg" alt="Random second slide">
 						<div class="carousel-caption">
-							<h3 class="text-white font-bold">Second slide label</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h3 class="text-white font-bold"></h3>
+							<p></p>
 						</div>
 					</ng-template>
 					<ng-template ngbSlide>
-						<img src="assets/images/big/portada4-1.jpg" alt="Random third slide">
+						<img src="assets/images/big/bolis.jpg" alt="Random third slide">
 						<div class="carousel-caption">
-							<h3 class="text-white font-bold">Third slide label</h3>
-							<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+							<h3 class="text-white font-bold"></h3>
+							<p></p>
 						</div>
 					</ng-template>
-        </ngb-carousel>
+				</ngb-carousel>
+				<br>
+				<br>
+				<br>
+				<div class="col-md-10">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id nisi a enim vehicula interdum. 
+						Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+						Phasellus ultrices, diam nec blandit lacinia, elit mauris dignissim est, vitae convallis risus 
+						velit sed tortor. Maecenas in ligula orci. Donec euismod posuere purus non ornare. Pellentesque 
+						ac est euismod, tempus mi eget, vehicula neque. Nulla eget elementum turpis. Sed justo lorem, convallis 
+						sit amet est nec, tempor mollis magna. Sed et urna luctus, consequat ante sed, laoreet augue. Vivamus 
+						non sodales velit. Suspendisse consequat justo sit amet dictum maximus. Quisque in neque sagittis, 
+						cursus leo commodo, bibendum nisi. Cras luctus tortor tortor, sodales imperdiet urna volutpat egestas. 
+						Vivamus non lorem aliquam nunc mattis viverra in efficitur ex. Phasellus commodo molestie lacus.
+					</p>
+				</div>
+
+				<div>
+					<button class="btn btn-danger">Ver Más</button>
+				</div>
