--- a/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.css
@@ -10,3 +10,17 @@ img {
     height: 30%;
     min-width: 100%;
 }
+
+.col-md-10 {
+    margin: 0 auto;
+}
+
+button {
+    
+    width: 200px;
+    height: 100px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4%;
+}
