--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
@@ -57,3 +57,10 @@
     width: 32%;
     float: left;
 }
+
+.card-outline-inverse {
+    border: grey 0.5px solid;
+    cursor: pointer;
+    width: 100%;
+    height: 20%;
+}
