vuelta atras en las tarjetas, Moraleja: rectificar es de sabios

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -8,8 +8,8 @@
                     <div class="card-header">
                         <h4 class="m-b-0 text-white">{{proyecto.nombre}} - {{proyecto.curso}}</h4>
                     </div>
-                    
-                    <img class="card-img-top img-responsive"  src={{proyecto.imagen}} alt="Card image cap">
+                    <br>
+                    <img class="card-img-top img-responsive" style="object-fit:scale-down; height:150px" src={{proyecto.imagen}} alt="Card image cap">
                     <div class="card-body">
                         <!--
                         <ngb-rating [readonly]="true" [(rate)]="proyect.valoracionMedia">
