--- a/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
@@ -14,7 +14,7 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let usuario">
-        <button mat-raised-button color="primary" (click)="deleteUsuario(usuario)">Eliminar</button>
+        <button mat-raised-button color="error" (click)="deleteUsuario(usuario)"><i class="material-icons">delete</i></button>
       </td>
     </ng-container>
   
