--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.css
@@ -8,16 +8,19 @@ button[mat-mini-fab]#A {
 
     background-color: #FF6384;
     margin-bottom: 2%;
+    cursor: default;
 }
 button[mat-mini-fab]#B {
 
     background-color: #4BC0C0;
     margin-bottom: 2%;
+    cursor: default;
 }
 button[mat-mini-fab]#C {
 
     background-color: #FFCE56;
     margin-bottom: 2%;
+    cursor: default;
 }
 mat-card{
     height: 20%;
