Menu responsivo moraleja vive y deja vivir pero solo a los que se lo merecen

--- a/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.html
@@ -38,13 +38,13 @@
     <!-- ============================================================== -->
     <!-- Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
-    <!-- <aside class="left-sidebar"> -->
+     <aside class="left-sidebar ocultarWeb"> 
         <!-- Sidebar scroll-->
-        <!-- <div class="scroll-sidebar" [perfectScrollbar]="config">
+      <div class="scroll-sidebar" [perfectScrollbar]="config">
             <app-sidebar></app-sidebar>
-        </div> -->
+        </div> 
         <!-- End Sidebar scroll-->
-    <!-- </aside> -->
+    </aside> 
     <!-- ============================================================== -->
     <!-- End Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
