--- a/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.scss
+++ b/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.scss
@@ -13,4 +13,13 @@
     .main-container {
         margin-left: 0px !important;
     }
+
+    
+}
+    
+@media only screen and (min-width: 992px) {
+    .ocultarWeb {
+        display: none;
+    }
+    
 }
