--- a/adminpro-angular7-lite/Angular/src/app/shared/sidebar/sidebar.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
-<!-- <nav class="sidebar-nav">
+<nav class="sidebar-nav">
     <ul id="sidebarnav">
      
-        <li [class.active]="showMenu === sidebarnavItem.title" *ngFor="let sidebarnavItem of sidebarnavItems" [routerLinkActive]="sidebarnavItem.submenu.length != 0 ? '' : 'active'">
+        <li [class.active]="showMenu === sidebarnavItem.title" *ngFor="let sidebarnavItem of sideNavItems" [routerLinkActive]="sidebarnavItem.submenu.length != 0 ? '' : 'active'">
             <div class="nav-small-cap" *ngIf="sidebarnavItem.extralink === true">{{sidebarnavItem.title}}</div>
             <a [routerLink]="sidebarnavItem.class === '' ? [sidebarnavItem.path] : null" [ngClass]="[sidebarnavItem.class]" *ngIf="!sidebarnavItem.extralink;"
                 (click)="addExpandClass(sidebarnavItem.title)">
@@ -14,4 +14,4 @@
         </li>
        
     </ul>
-</nav> -->
+</nav> 
