--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.css
@@ -8,12 +8,13 @@
 }
 
 .carousel {
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    min-height: 400px;
+    text-align: center;
 }
 
-.c-img {
-    max-width: 600px;
-    max-height: 400px;
+.u-img {
+    width: 100%;
+    height: 100%;
 }
 
