--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6 col-xlg-5">
+    <div class="col-md-6">
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title">{{proyect.nombre}}</h3>
