--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.css
@@ -1,9 +1,9 @@
-.u-img{
-    float: left; 
-    margin-right: 2%; 
-    border-radius: 100%; 
+.u-img {
+    float: left;
+    margin-right: 2%;
+    border-radius: 100%;
     margin-top: 1%;
-    width: 40px; 
+    width: 40px;
     height: 40px;
 }
 
@@ -18,3 +18,7 @@
     height: 100%;
 }
 
+mat-chip-list {
+    float: left;
+    margin-left: 1%;
+}
