funcionalidad de borrar comentarios desde ultimosComentarios directamente tanto como para usuario como para administrador hechos, moraleja: cuanto más se tiene, más se quiere

--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -50,8 +50,10 @@
                 <h4 class="m-b-0 text-white">Añade un comentario y tu valoración</h4>
             </div>
             <div class="card-body">
-                <input formControlName="contenido" class="form-control" id="contenido" [(ngModel)]="contenido" placeholder="comentario" type="text">
-                <div *ngIf="comentarioForm.controls['contenido'].invalid && (comentarioForm.controls['contenido'].dirty || comentarioForm.controls['contenido'].touched)" class="alert alert-danger">
+                <input formControlName="contenido" class="form-control" id="contenido" [(ngModel)]="contenido"
+                    placeholder="comentario" type="text">
+                <div *ngIf="comentarioForm.controls['contenido'].invalid && (comentarioForm.controls['contenido'].dirty || comentarioForm.controls['contenido'].touched)"
+                    class="alert alert-danger">
                     <div *ngIf="comentarioForm.controls['contenido'].errors.required">
                         ¡No olvides escribir tu comentario!
                     </div>
@@ -65,7 +67,8 @@
                 </ngb-rating>
                 <br>
                 <br>
-                <button class="btn btn-inverse" (click)="addComentario()" [disabled]="!comentarioForm.valid">Comentar</button>
+                <button class="btn btn-inverse" (click)="addComentario()"
+                    [disabled]="!comentarioForm.valid">Comentar</button>
             </div>
         </form>
     </div>
@@ -85,8 +88,14 @@
             <div class="m-t-10">Valoración:
                 <b>{{comentario.valoracion}}</b>
             </div>
-            <button class="btn btn-danger" *ngIf="esMioElComentario(comentario.autor) && !masComentarios" (click)="deleteComentarioUser(comentario.id)">Eliminar</button>
-            <button class="btn btn-danger" *ngIf="isAdmin() && !masComentarios" (click)="deleteComentario(comentario.id)">Eliminar</button>
+            <button class="btn btn-danger" *ngIf="esMioElComentario(comentario.autor) && !masComentarios"
+                (click)="deleteComentarioUser(comentario.id)">Eliminar</button>
+            <button class="btn btn-danger" *ngIf="isAdmin() && !masComentarios"
+                (click)="deleteComentario(comentario.id)">Eliminar</button>
+            <button class="btn btn-danger" *ngIf="esMioElComentario(comentario.autor) && masComentarios"
+                (click)="deleteUltimoComentario(comentario.autor, comentario.contenido)">Eliminar</button>
+            <button class="btn btn-danger" *ngIf="isAdmin() && masComentarios"
+                (click)="deleteUltimoComentario(comentario.autor, comentario.contenido)">Eliminar</button>
         </div>
     </div>
 </div>
