--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -9,12 +9,7 @@
                 <div class="container" id="grafico">
                     <div class="col-sm-4 text-center">
                         <!-- (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)" valoresgraficos(pregunta)  (chartClick)="chartClicked($event)"-->
-                        <canvas baseChart 
-                        [legend]=false 
-                        [data]="[pregunta.nA, pregunta.nB, pregunta.nC]"
-                        [labels]="pieChartLabels"
-                        [chartType]="pieChartType" 
-                        (chartHover)="chartHovered($event)"></canvas>
+                        <canvas baseChart [legend]=false [data]="[pregunta.nA, pregunta.nB, pregunta.nC]" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)"></canvas>
                     </div>
                 </div>
                 <button mat-mini-fab color="primary" (click)="randomizeType()"><i class="fa fa-chart-pie fa-x"></i></button>
@@ -30,7 +25,7 @@
     <button *ngIf="isAdmin()" color="primary" (click)="openDialogAddPregunta()" type="button" class="btn btn-success btn-circle btn-lg mat-fab-bottom-right" style="z-index: 9;"><i class="fa fa-plus fa-x"></i></button>
 </div>
 <!--**FORMULARIO ENCUESTA (USER)-->
-<div id="form" fxFlexFill *ngIf="!isAdmin()">
+<div id="form" fxFlexFill *ngIf="!isAdmin() || encuesta">
     <div fxFlexFill *ngFor="let pregunta of preguntas">
 
         <h2 mat-subheader>{{pregunta.pregunta}}</h2>
