--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.css
@@ -25,3 +25,12 @@ button[mat-mini-fab]#C {
 mat-card{
     height: 20%;
 }
+
+button[mat-fab]#descargaPDF{
+    background-color: #a61d21;
+}
+
+button[mat-fab]#descargaCSV{
+    margin-left: 2%;
+    background-color: #007233;;
+}
